@@ -1,3 +1,7 @@
+2022-08-09
+
+	* src/setup.c: added MS365 account setup and OAuth2 support for Gmail.
+
 2022-07-08
 
 	* libsylph/oauth2.c: oauth2_get_token(): remove trailing CR.
